[IMG-1753] Code smell correction
Signed-off-by: marifunf <marianne.funfrock@rte-france.com>